fix: orbital station travelling sometimes leading to rubber-banding back to earth